--- a/web/WEB-INF/src/database.properties
+++ b/web/WEB-INF/src/database.properties
@@ -1,5 +1,14 @@
-DatabaseURL = jdbc:mysql://localhost:3306/pmacct
+DatabaseURL = jdbc:mysql://fen-fw.aptivate.org:3306/pmacct
+# DatabaseURL = jdbc:mysql://localhost:3306/pmacct
 DatabaseUser = pmacct
 DatabasePass = ytogl4dfh7
 
+# Test
+#DatabaseURL = jdbc:mysql://fen-apps:3306/test
+#DatabaseUser = pmacct
+#DatabasePass = 
+
+# End Test
+
 LocalSubnet = 10.0.156.
+
