made possible to choose between mysql and postgres
git-svn-id: https://svn.code.sf.net/p/pmgraph/code/pmgraph@53 903098bd-d3be-4b5e-9df1-ec1ba492e1ff

--- a/.classpath
+++ b/.classpath
@@ -17,5 +17,6 @@
 	<classpathentry kind="src" path="web/WEB-INF/src"/>
 	<classpathentry kind="src" path="tests"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3.8.1"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/postgresql-8.3-604.jdbc4.jar"/>
 	<classpathentry kind="output" path="web/WEB-INF/classes"/>
 </classpath>
