--- a/tests/tests.properties
+++ b/tests/tests.properties
@@ -1,1 +1,14 @@
-Port = 8200
+Port = 8030
+# Test
+DatabaseURL = jdbc:mysql://fen-apps:3306/test
+DatabaseUser = pmacct
+DatabasePass = 
+JdbcDriver = com.mysql.jdbc.Driver
+# End Test
+
+# Test
+#DatabaseURL = jdbc:postgresql://fen-apps/test
+#DatabaseUser = pmacct2
+#DatabasePass = mypassword
+#JdbcDriver = org.postgresql.Driver
+# End Test
