--- a/web/WEB-INF/src/database.properties
+++ b/web/WEB-INF/src/database.properties
@@ -1,12 +1,18 @@
-#DatabaseURL = jdbc:mysql://fen-fw.aptivate.org:3306/pmacct
-#DatabaseUser = pmacct
-#DatabasePass = ytogl4dfh7
 
 # Test
 DatabaseURL = jdbc:mysql://fen-apps:3306/test
 DatabaseUser = pmacct
 DatabasePass = 
+JdbcDriver = com.mysql.jdbc.Driver
 # End Test
+
+# Test
+#DatabaseURL = jdbc:postgresql://fen-apps/test
+#DatabaseUser = pmacct2
+#DatabasePass = mypassword
+#JdbcDriver = org.postgresql.Driver
+# End Test
+
 
 LocalSubnet = 10.0.156.
 
