--- a/web/WEB-INF/src/database.properties
+++ b/web/WEB-INF/src/database.properties
@@ -14,5 +14,11 @@ JdbcDriver = com.mysql.jdbc.Driver
 # End Test
 
 
-LocalSubnet = 10.0.156.
+LocalSubnet 	= 10.0.156.
 
+# DHCP data in orde to connect it and get hostNames info key in base64
+DHCPAdress 		= 10.0.156.1
+DHCPPort		= 7911
+# Name of the secred key as in dhcpd.conf
+DHCPName		= omapi_key
+DHCPPass		= loool
