git-svn-id: https://svn.code.sf.net/p/pmgraph/code/pmgraph@57 903098bd-d3be-4b5e-9df1-ec1ba492e1ff

--- a/web/WEB-INF/src/database.properties
+++ b/web/WEB-INF/src/database.properties
@@ -6,7 +6,7 @@ DatabasePass =
 JdbcDriver = com.mysql.jdbc.Driver
 # End Test
 
-# Test
+# Test PostGresql example
 #DatabaseURL = jdbc:postgresql://fen-apps/test
 #DatabaseUser = pmacct2
 #DatabasePass = mypassword
@@ -17,8 +17,10 @@ JdbcDriver = com.mysql.jdbc.Driver
 LocalSubnet 	= 10.0.156.
 
 # DHCP data in orde to connect it and get hostNames info key in base64
-DHCPAdress 		= 10.0.156.1
+# If you haven't got a DHCP server just leave parameters empty to disable
+# DHCP hostnames resolution
+DHCPAdress 		= 
 DHCPPort		= 7911
 # Name of the secred key as in dhcpd.conf
 DHCPName		= omapi_key
-DHCPPass		= loool
+DHCPPass		= yourkey
