--- a/web/WEB-INF/src/database.properties
+++ b/web/WEB-INF/src/database.properties
@@ -14,6 +14,12 @@ JdbcDriver = com.mysql.jdbc.Driver
 # End Test
 
 
+# Test
+#DatabaseURL = jdbc:mysql://fen-dev.fen.aptivate.org/test
+#DatabaseUser = pmacct
+#DatabasePass = 
+# End Test
+
 LocalSubnet 	= 10.0.156.
 
 # DHCP data in orde to connect it and get hostNames info key in base64
