--- a/web/WEB-INF/src/database.properties
+++ b/web/WEB-INF/src/database.properties
@@ -14,12 +14,6 @@ JdbcDriver = com.mysql.jdbc.Driver
 # End Test
 
 
-# Test
-#DatabaseURL = jdbc:mysql://fen-dev.fen.aptivate.org/test
-#DatabaseUser = pmacct
-#DatabasePass = 
-# End Test
-
 LocalSubnet 	= 10.0.156.
 
 # DHCP data in orde to connect it and get hostNames info key in base64
@@ -30,3 +24,6 @@ DHCPPort		= 7911
 # Name of the secred key as in dhcpd.conf
 DHCPName		= omapi_key
 DHCPPass		= yourkey
+
+# Default numbre of IP's showed in a graph
+ResultLimit		= 5
