add jars: dom4j, easyMock
git-svn-id: https://svn.code.sf.net/p/pmgraph/code/pmgraph@116 903098bd-d3be-4b5e-9df1-ec1ba492e1ff

--- a/.classpath
+++ b/.classpath
@@ -19,9 +19,12 @@
 	<classpathentry kind="lib" path="web/WEB-INF/lib/xhtmlvalidator-0.2.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/joda-time-1.6.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/jfreechar1.0.8.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/easymock.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/easymockclassextension.jar"/>
 	<classpathentry kind="src" path="web/WEB-INF/src"/>
 	<classpathentry kind="src" path="tests"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3.8.1"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/postgresql-8.3-604.jdbc4.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/dom4j-1.6.1.jar"/>
 	<classpathentry kind="output" path="web/WEB-INF/classes"/>
 </classpath>
