Modification of the debian package builder to add use of debconf

--- a/debian/control
+++ b/debian/control
@@ -2,11 +2,12 @@ Source: pmgraph
 Section: net
 Priority: optional
 Maintainer: Aptivate <info+pmgraph@aptivate.org>
-Build-Depends: debhelper (>> 5), javahelper , ant
+Build-Depends: debhelper (>> 5), javahelper , ant (>= 1.7)
 Build-Depends-Indep: sun-java6-jdk
 Standards-Version: 3.7.3
 Homepage: http://pmgraph.sourceforge.net
 
+Pre-Depends: debconf
 Package: pmgraph
 Architecture: all
 Depends: tomcat5.5 (>= 5.5), pmacct (>= 0.11)
