--- a/config/pmacctd.conf
+++ b/config/pmacctd.conf
@@ -13,7 +13,7 @@ sql_history_roundoff: m
 sql_table_version: 6
 sql_host: localhost
 sql_user: pmacct
-sql_passwd: ytogl4dfh7
+sql_passwd: secret
 sql_refresh_time: 60
 sql_multi_values: 1024000
 sql_dont_try_update: true
