--- a/web/WEB-INF/src/database.dist.properties
+++ b/web/WEB-INF/src/database.dist.properties
@@ -1,8 +1,8 @@
 
 # Test
-DatabaseURL = jdbc:mysql://fen-apps:3306/test
+DatabaseURL = jdbc:mysql://localhost:3306/pmacct
 DatabaseUser = pmacct
-DatabasePass = 
+DatabasePass = secret
 JdbcDriver = com.mysql.jdbc.Driver
 # End Test
 
