Updated debian package builder Relative links in pmgraph buttons to avoid had code of the deplyment directory. update in test codes.

--- a/web/WEB-INF/src/database.dist.properties
+++ b/web/WEB-INF/src/database.dist.properties
@@ -1,5 +1,6 @@
 
 # Test
+# GNU Java DatabaseURL = jdbc:mysql://localhost:3306/pmacct?useJvmCharsetConverters=true
 DatabaseURL = jdbc:mysql://localhost:3306/pmacct
 DatabaseUser = pmacct
 DatabasePass = secret
