--- a/debian/control
+++ b/debian/control
@@ -10,6 +10,6 @@ Homepage: http://pmgraph.sourceforge.net
 Pre-Depends: debconf
 Package: pmgraph
 Architecture: all
-Depends: tomcat5.5 (>= 5.5), pmacct (>= 0.11)
+Depends: tomcat5.5 (>= 5.5), pmacct (>= 0.11), mysql-server (>= 5.0), sun-java6-jdk
 Description: pmGraph is a software application for network monitoring to work with pmacct
         The purpose of pmGraph is to work with pmacct, a network monitoring and auditing tool pmacct runs on a firewall, router or bridge, or collects information from multiple routers, and stores the information in a database. The database permits powerful analysis, but is difficult to use. pmGraph helps by providing a simple graphical overview of the network data recorded by pmacct.  
