--- a/debian/pmgraph.config
+++ b/debian/pmgraph.config
@@ -6,4 +6,7 @@
 # Do you like debian?
 db_input high pmgraph/mysql || true
 db_go
+# Do you like to disable java security
+db_input high pmgraph/java_security || true
+db_go
 
