--- a/web/WEB-INF/src/database.dist.properties
+++ b/web/WEB-INF/src/database.dist.properties
@@ -17,14 +17,14 @@ JdbcDriver = com.mysql.jdbc.Driver
 
 LocalSubnet 	= 10.0.156.
 
-# DHCP data in orde to connect it and get hostNames info key in base64
+# DHCP data in order to connect to it and get hostNames. Info key in base64
 # If you haven't got a DHCP server just leave parameters empty to disable
 # DHCP hostnames resolution
 DHCPAdress 		= 
 DHCPPort		= 7911
-# Name of the secred key as in dhcpd.conf
+# Name of the secret key as in dhcpd.conf
 DHCPName		= omapi_key
 DHCPPass		= yourkey
 
-# Default numbre of IP's showed in a graph
+# Default number of IP's shown in a graph
 ResultLimit		= 5
