--- a/web/WEB-INF/src/log4j.dist.properties
+++ b/web/WEB-INF/src/log4j.dist.properties
@@ -4,7 +4,7 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 # Pattern to output the caller's file name and line number.
 log4j.appender.stdout.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n
 
-##### A FileAppener Example
+##### A FileAppender Example
 #log4j.appender.R=org.log4j.RollingFileAppender
 #log4j.appender.R.File=example.log
 #log4j.appender.R.MaxFileSize=100KB
