Improved GraphData constructor to make graph creation faster.
New parameters set in pmacct example config file to reduce the traffic
logged removing slow traffic, and traffic which does not belong to local network.



git-svn-id: https://svn.code.sf.net/p/pmgraph/code/pmgraph@197 903098bd-d3be-4b5e-9df1-ec1ba492e1ff

--- a/config/pmacctd.conf
+++ b/config/pmacctd.conf
@@ -5,6 +5,9 @@ syslog: daemon
 plugins: mysql
 
 aggregate: src_host, src_port, dst_host, dst_port, proto
+! Just log not local trafic 
+pcap_filter: not (src and dst net 10.0.156.0/24)
+
 
 sql_db: pmacct
 sql_table: acct_v6
@@ -15,6 +18,8 @@ sql_host: localhost
 sql_user: pmacct
 sql_passwd: secret
 sql_refresh_time: 60
-sql_multi_values: 1024000
 sql_dont_try_update: true
 sql_optimize_clauses: true
+
+! Just log trafic highter than 1kb/min Set this value to a 1% of your connection speed
+sql_preprocess: minb = 1000
