Improved debian package builder:
    Solved problem caused by the use of gnu java in the build of the package). 

Mysql script to create pmact table now create a table with just the necessary columns and does not remove the table if it it already created when tha script is executed.




git-svn-id: https://svn.code.sf.net/p/pmgraph/code/pmgraph@204 903098bd-d3be-4b5e-9df1-ec1ba492e1ff

--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: pmgraph
 Section: net
 Priority: optional
-Maintainer: Aptivate <info+pmgraph@aptivate.org>
+Maintainer: Aptivate <pmgraph-team@aptivate.org>
 Build-Depends: debhelper (>> 5), javahelper , ant (>= 1.7)
 Build-Depends-Indep: sun-java6-jdk
 Standards-Version: 3.7.3
