--- a/debian/rules
+++ b/debian/rules
@@ -8,7 +8,7 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
-export JAVA_HOME=/usr
+export JAVA_HOME=/usr/lib/jvm/java-6-sun
 
 # Put depended upon jars in here
 # export CLASSPATH=
