--- a/web/WEB-INF/src/database.dist.properties
+++ b/web/WEB-INF/src/database.dist.properties
@@ -20,7 +20,7 @@ LocalSubnet 	= 10.0.156.
 # DHCP data in order to connect to it and get hostNames. Info key in base64
 # If you haven't got a DHCP server just leave parameters empty to disable
 # DHCP hostnames resolution
-DHCPAdress 		= 
+DHCPAddress 		= 
 DHCPPort		= 7911
 # Name of the secret key as in dhcpd.conf
 DHCPName		= omapi_key
