Selection of different colours for port with different protocol.
Db table name is now configurable in configuration file.

Proto field removed form request of IP views.


git-svn-id: https://svn.code.sf.net/p/pmgraph/code/pmgraph@229 903098bd-d3be-4b5e-9df1-ec1ba492e1ff

--- a/web/WEB-INF/src/database.dist.properties
+++ b/web/WEB-INF/src/database.dist.properties
@@ -5,6 +5,7 @@ DatabaseURL = jdbc:mysql://localhost:3306/pmacct
 DatabaseUser = pmacct
 DatabasePass = secret
 JdbcDriver = com.mysql.jdbc.Driver
+DatabaseTable = acct_v6
 # End Test
 
 # Test PostGresql example
