some comments added and a couple of modifications in debian files to match the current version of pmGraph
git-svn-id: https://svn.code.sf.net/p/pmgraph/code/pmgraph@245 903098bd-d3be-4b5e-9df1-ec1ba492e1ff

--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: pmGraph
+Source: pmgraph
 Section: net
 Priority: optional
 Maintainer: Aptivate <pmgraph-team@aptivate.org>
@@ -8,7 +8,7 @@ Standards-Version: 3.7.3
 Homepage: http://pmgraph.sourceforge.net
 
 Pre-Depends: debconf
-Package: pmGraph
+Package: pmgraph
 Architecture: all
 Depends: tomcat5.5 (>= 5.5), pmacct (>= 0.11), mysql-server (>= 5.0), sun-java6-jdk
 Description: pmGraph is a software application for network monitoring to work with pmacct
