--- a/web/WEB-INF/src/log4j.properties
+++ b/web/WEB-INF/src/log4j.properties
@@ -1,8 +1,17 @@
-log4j.rootCategory=debug, stdout
+log4j.rootCategory=debug,stdout
+#Add "A" to the list of rootCategory if you want to store the log data in a file
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 # Pattern to output the caller's file name and line number.
 log4j.appender.stdout.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n
+
+##logs get appended to a daily created file
+#log4j.appender.A=org.apache.log4j.DailyRollingFileAppender
+##This is the path where the log will be stored. Make it match with the one of your choice.
+#log4j.appender.A.File=/home/user/log/pmgraph.log
+#log4j.appender.A.layout=org.apache.log4j.PatternLayout
+# Pattern to output the caller's file name , line number and date and time.
+#log4j.appender.A.layout.ConversionPattern=%d{MM-dd@HH:mm:ss} %5p [%t] (%F:%L) - %m%n
 
 ##### A FileAppender Example
 #log4j.appender.R=org.log4j.RollingFileAppender
