--- a/config/pmacctd.conf
+++ b/config/pmacctd.conf
@@ -2,22 +2,37 @@ daemonize: true
 pidfile: /var/run/pmacctd.pid
 syslog: daemon
 
-plugins: mysql
+plugins: mysql[inbound1], mysql[outbound1], mysql[inbound2], mysql[outbound2]
 
-aggregate: src_host, src_port, dst_host, dst_port, proto
+aggregate[inbound1]: src_host, src_port, dst_host, dst_port, proto
+aggregate[outbound1]: src_host, src_port, dst_host, dst_port, proto
+aggregate[inbound2]: src_host, src_port, dst_host, dst_port, proto
+aggregate[outbound2]: src_host, src_port, dst_host, dst_port, proto
 ! Just log not local trafic 
-pcap_filter: not (src and dst net 10.0.156.0/24)
+pcap_filter: not (src and dst net 10.0.2.0/24)
 
 
 sql_db: pmacct
-sql_table: acct_v6
-sql_history: 1m
-sql_history_roundoff: m
+sql_table[inbound1]: acct_v6
+sql_table[outbound1]: acct_v6
+sql_table[inbound2]: acct_v6_long
+sql_table[outbound2]: acct_v6_long
+sql_history[inbound1]: 1m
+sql_history[outbound1]: 1m
+sql_history[inbound2]: 1h
+sql_history[outbound2]: 1h
+sql_history_roundoff[inbound1]: m
+sql_history_roundoff[outbound1]: m
+sql_history_roundoff[inbound2]: h
+sql_history_roundoff[outbound2]: h
 sql_table_version: 6
 sql_host: localhost
 sql_user: pmacct
-sql_passwd: secret
-sql_refresh_time: 60
+sql_passwd: apass
+sql_refresh_time[inbound1]: 60
+sql_refresh_time[outbound1]: 60
+sql_refresh_time[inbound2]: 3600
+sql_refresh_time[outbound2]: 3600
 sql_dont_try_update: true
 sql_optimize_clauses: true
 
