This file has the defualt pcap filter restored to being 10.0.156.0/24, meaning it will once again work with the install script. It also has numerous comments added documenting the changes required for logging data to different tables.
git-svn-id: https://svn.code.sf.net/p/pmgraph/code/pmgraph@251 903098bd-d3be-4b5e-9df1-ec1ba492e1ff

--- a/config/pmacctd.conf
+++ b/config/pmacctd.conf
@@ -2,25 +2,40 @@ daemonize: true
 pidfile: /var/run/pmacctd.pid
 syslog: daemon
 
+! There are now four MySQL plugins, two pairs of inbound and outbound. 
+! They are labeled as inbound1, outbound1, inbound2 and outbound2, 
+! with the labels after the plugin names in square brackets e.g. mysql[inbound1]
+! One pair is required for each table used. At the time of writing two pairs are in use,
+! and this number is assumed for the rest of the document
 plugins: mysql[inbound1], mysql[outbound1], mysql[inbound2], mysql[outbound2]
 
+! The aggregates, sql_table, sql_history, sql_history_roundoff and sql_refresh_time values have been set up, one for each plugin
+! They are associated with the plugin using labels, in the same manner as they are used in the plugin declaration.
+! E.g. aggregate[inbound1]:
 aggregate[inbound1]: src_host, src_port, dst_host, dst_port, proto
 aggregate[outbound1]: src_host, src_port, dst_host, dst_port, proto
 aggregate[inbound2]: src_host, src_port, dst_host, dst_port, proto
 aggregate[outbound2]: src_host, src_port, dst_host, dst_port, proto
-! Just log not local trafic 
-pcap_filter: not (src and dst net 10.0.2.0/24)
+! Just log not local traffic
+! May need to change for local network 
+pcap_filter: not (src and dst net 10.0.156.0/24)
 
 
 sql_db: pmacct
 sql_table[inbound1]: acct_v6
 sql_table[outbound1]: acct_v6
+! The acct_v6_long table needs to be created. This can be done with the following query:
+! create table if not exists acct_v6_long (ip_src CHAR(15) NOT NULL, ip_dst CHAR(15) NOT NULL,	src_port INT(2) UNSIGNED NOT NULL,
+! dst_port INT(2) UNSIGNED NOT NULL, ip_proto CHAR(6) NOT NULL, packets INT UNSIGNED NOT NULL, bytes BIGINT UNSIGNED NOT NULL,
+! flows INT UNSIGNED NOT NULL, stamp_inserted DATETIME NOT NULL, stamp_updated DATETIME, PRIMARY KEY (ip_src, ip_dst, src_port, dst_port, ip_proto, stamp_inserted));
 sql_table[inbound2]: acct_v6_long
 sql_table[outbound2]: acct_v6_long
+! SQL history is one minute (1m) for the first pair (inbound1 and outbound1) and one hour(1h) for the second (inbound2 and outbound2)
 sql_history[inbound1]: 1m
 sql_history[outbound1]: 1m
 sql_history[inbound2]: 1h
 sql_history[outbound2]: 1h
+! The readings are rounded to the nearest minute (m) for the first pair and the nearest hour (h) for the second
 sql_history_roundoff[inbound1]: m
 sql_history_roundoff[outbound1]: m
 sql_history_roundoff[inbound2]: h
@@ -29,6 +44,8 @@ sql_table_version: 6
 sql_host: localhost
 sql_user: pmacct
 sql_passwd: apass
+! The first pair refresh data every 60 seconds, the second pair every 3600 seconds,
+! to match the timeperiods associated with that pair in sql_history and the roundoff
 sql_refresh_time[inbound1]: 60
 sql_refresh_time[outbound1]: 60
 sql_refresh_time[inbound2]: 3600
