pmGraph now displays graphs with lower sample rates when covering longer time periods.
git-svn-id: https://svn.code.sf.net/p/pmgraph/code/pmgraph@252 903098bd-d3be-4b5e-9df1-ec1ba492e1ff

--- a/web/WEB-INF/src/database.dist.properties
+++ b/web/WEB-INF/src/database.dist.properties
@@ -5,7 +5,11 @@ DatabaseURL = jdbc:mysql://localhost:3306/pmacct
 DatabaseUser = pmacct
 DatabasePass = secret
 JdbcDriver = com.mysql.jdbc.Driver
+DatabaseLongTable = acct_v6_long
 DatabaseTable = acct_v6
+# This value is the number of hours the graph must cover before pmGraph switches to displaying over a 
+# longer time period. If it is < 24, this feature is disabled.
+TimespansForLongGraph = 24
 # End Test
 
 # Test PostGresql example
