--- a/web/WEB-INF/src/database.dist.properties
+++ b/web/WEB-INF/src/database.dist.properties
@@ -1,35 +1,33 @@
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<!DOCTYPE properties SYSTEM "http://java.sun.com/dtd/properties.dtd">
+<properties>
+<comment/>
+<!-- Default number of IP's shown in a graph -->
+<entry key="ResultLimit">5</entry>
+<!-- GNU Java DatabaseURL = jdbc:mysql://localhost:3306/pmacct?useJvmCharsetConverters=true -->
+<entry key="DatabaseURL">jdbc:mysql://localhost:3306/pmacct</entry>
+<entry key="DatabaseUser">pmacct</entry>
+<entry key="DatabasePass">secret</entry>
+<entry key="JdbcDriver">com.mysql.jdbc.Driver</entry>
+<entry key="LocalSubnet">10.0.156.</entry>
+<entry key="DatabaseTable">acct_v6</entry>
+<entry key="DatabaseLongTable">acct_v6_long</entry>
+<!-- This value is the number of hours the graph must cover before pmGraph switches to displaying over a -->
+<!-- longer time period. If it is < 24, this feature is disabled. -->
+<entry key="TimespansForLongGraph">24</entry>
+<!-- DHCP data in order to connect to it and get hostNames. Info key in base64 -->
+<!-- If you haven't got a DHCP server just leave parameters empty to disable -->
+<!-- DHCP hostnames resolution -->
+<entry key="DHCPPass">yourkey</entry>
+<entry key="DHCPPort">7911</entry>
+<!-- Name of the secret key as in dhcpd.conf -->
+<entry key="DHCPName">omapi_key</entry>
+<entry key="DHCPAddress"/>
 
-# Test
-# GNU Java DatabaseURL = jdbc:mysql://localhost:3306/pmacct?useJvmCharsetConverters=true
-DatabaseURL = jdbc:mysql://localhost:3306/pmacct
-DatabaseUser = pmacct
-DatabasePass = secret
-JdbcDriver = com.mysql.jdbc.Driver
-DatabaseLongTable = acct_v6_long
-DatabaseTable = acct_v6
-# This value is the number of hours the graph must cover before pmGraph switches to displaying over a 
-# longer time period. If it is < 24, this feature is disabled.
-TimespansForLongGraph = 24
-# End Test
+<!-- Test PostGresql example -->
+<!-- entry key="DatabaseURL"--> <!-- jdbc:postgresql://fen-apps/test --><!-- /entry -->
+<!-- entry key="DatabaseUser"--> <!-- pmacct2 --><!-- /entry -->  
+<!-- entry key="DatabasePass"--> <!-- mypassword --><!-- /entry -->  
+<!-- entry key="JdbcDriver"--> <!-- org.postgresql.Driver --><!-- /entry -->  
 
-# Test PostGresql example
-#DatabaseURL = jdbc:postgresql://fen-apps/test
-#DatabaseUser = pmacct2
-#DatabasePass = mypassword
-#JdbcDriver = org.postgresql.Driver
-# End Test
-
-
-LocalSubnet 	= 10.0.156.
-
-# DHCP data in order to connect to it and get hostNames. Info key in base64
-# If you haven't got a DHCP server just leave parameters empty to disable
-# DHCP hostnames resolution
-DHCPAddress 		= 
-DHCPPort		= 7911
-# Name of the secret key as in dhcpd.conf
-DHCPName		= omapi_key
-DHCPPass		= yourkey
-
-# Default number of IP's shown in a graph
-ResultLimit		= 5
+</properties>
