Changed sql_passwd back to default value.
git-svn-id: https://svn.code.sf.net/p/pmgraph/code/pmgraph@265 903098bd-d3be-4b5e-9df1-ec1ba492e1ff

--- a/config/pmacctd.conf
+++ b/config/pmacctd.conf
@@ -43,7 +43,7 @@ sql_history_roundoff[outbound2]: h
 sql_table_version: 6
 sql_host: localhost
 sql_user: pmacct
-sql_passwd: apass
+sql_passwd: secret
 ! The first pair refresh data every 60 seconds, the second pair every 3600 seconds,
 ! to match the timeperiods associated with that pair in sql_history and the roundoff
 sql_refresh_time[inbound1]: 60
