Cleaned up debian directory and added "clean" option to Ant build file.
git-svn-id: https://svn.code.sf.net/p/pmgraph/code/pmgraph@323 903098bd-d3be-4b5e-9df1-ec1ba492e1ff

--- a/build.xml
+++ b/build.xml
@@ -104,6 +104,15 @@
 			<classpath refid="classpath"/>
         </javac>
 	</target>
+
+<!--
+/*****************************************************
+** Clean: Remove compiled files
+******************************************************/-->
+	<target name="clean">
+		<delete dir="${build.directory}" includeemptydirs="true" />
+		<delete dir="${war.directory}" includeemptydirs="true" />
+	</target>
 	
 <!--
 /*****************************************************
