--- a/debian/control
+++ b/debian/control
@@ -1,15 +1,15 @@
 Source: pmgraph
 Section: net
 Priority: optional
-Maintainer: Aptivate <pmgraph-team@aptivate.org>
-Build-Depends: debhelper (>> 5), javahelper , ant (>= 1.7)
-Build-Depends-Indep: sun-java6-jdk
+Maintainer: PmGraph Team <pmgraph-team@aptivate.org>
+Build-Depends: debhelper (>> 5), javahelper (>= 0.24), ant
+Build-Depends-Indep: openjdk-6-jdk
 Standards-Version: 3.7.3
-Homepage: http://pmgraph.sourceforge.net
+Homepage: http://pmgraph.sourceforge.net/
 
 Pre-Depends: debconf
 Package: pmgraph
 Architecture: all
-Depends: tomcat5.5 (>= 5.5), pmacct (>= 0.11), mysql-server (>= 5.0), sun-java6-jdk
-Description: pmGraph is a software application for network monitoring to work with pmacct
-        The purpose of pmGraph is to work with pmacct, a network monitoring and auditing tool pmacct runs on a firewall, router or bridge, or collects information from multiple routers, and stores the information in a database. The database permits powerful analysis, but is difficult to use. pmGraph helps by providing a simple graphical overview of the network data recorded by pmacct, allowing you to see the traffic of the local machines the most used ports and the remote machines the local ones are connecting to. It let you see information of a specific local or remote Ip or Port.
+Depends: tomcat6 | tomcat5.5, pmacct (>=0.11), mysql-server
+Description: A graphical user interface for network traffic monitoring with pmacct 
+        The purpose of pmGraph is to work with pmacct, a network monitoring and auditing tool pmacct runs on a firewall, router or bridge, or collects information from multiple routers, and stores the information in a database. The database permits powerful analysis, but is difficult to use. pmGraph helps by providing a simple graphical overview of the network data recorded by pmacct. 
