--- a/debian/pmgraph.config
+++ b/debian/pmgraph.config
@@ -4,7 +4,7 @@
 . /usr/share/debconf/confmodule
 
 # Do you like debian?
-db_input high pmgraph/mysql || true
+db_input high pmgraph/mysql-root-password || true
 db_go
 # Do you like to disable java security
 db_input high pmgraph/java_security || true
