Support setting a fixed vertical axis scale for the graph, e.g. using inbound and outbound bandwidth.
git-svn-id: https://svn.code.sf.net/p/pmgraph/code/pmgraph@336 903098bd-d3be-4b5e-9df1-ec1ba492e1ff

--- a/web/WEB-INF/src/database.dist.properties
+++ b/web/WEB-INF/src/database.dist.properties
@@ -16,6 +16,10 @@
 <!-- longer time period. If it is < 24, this feature is disabled. -->
 <entry key="TimespansForLongGraph">24</entry>
 
+<!-- Force a fixed scale, useful if cached traffic causes silly autoscaling -->
+<entry key="FixedScaleMin">-100000</entry>
+<entry key="FixedScaleMax">400000</entry>
+
 <!-- DHCP data in order to connect to it and get hostNames. Info key in base64 -->
 <!-- If you haven't got a DHCP server just leave parameters empty to disable -->
 <!-- DHCP hostnames resolution -->
