Update to latest snapshot of OMAPI from [https://github.com/aptivate/omapi-dhcp]
git-svn-id: https://svn.code.sf.net/p/pmgraph/code/pmgraph@338 903098bd-d3be-4b5e-9df1-ec1ba492e1ff

--- a/.classpath
+++ b/.classpath
@@ -13,7 +13,6 @@
 	<classpathentry kind="lib" path="lib/xmlParserAPIs-2.6.1.jar"/>
 	<classpathentry kind="lib" path="lib/httpunit.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/dnsjava-2.0.6.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/omapi.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/log4j-1.2.15.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/xhtmlvalidator-0.2.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/joda-time-1.6.jar"/>
@@ -21,6 +20,7 @@
 	<classpathentry kind="lib" path="web/WEB-INF/lib/easymock.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/easymockclassextension.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/mysql-connector-java-5.1.18-bin.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/omapi-dhcp-0.0.1-SNAPSHOT.jar"/>
 	<classpathentry kind="src" path="web/WEB-INF/src"/>
 	<classpathentry kind="src" path="tests"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3.8.1"/>
@@ -32,5 +32,6 @@
 	<classpathentry kind="var" path="TOMCAT_HOME/lib/jsp-api.jar"/>
 	<classpathentry kind="var" path="TOMCAT_HOME/lib/el-api.jar"/>
 	<classpathentry kind="var" path="TOMCAT_HOME/lib/annotations-api.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/omapi-dhcp"/>
 	<classpathentry kind="output" path="web/WEB-INF/classes"/>
 </classpath>
